--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 /MessiahSoftwareSolutions.com/obj/
 /.vs/
 /IISPUBLISH-dev.MessiahSolutions.com/
-/packages/ 
-
-
-
+/packages/
+/MessiahSoftwareSolutions.com/PrivateAppSettings.config
+/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj.user
 
 
 
