added PrivateConnectionStrings.config file and added it to gitIgnore to avoid pushing sensitive information to public repository

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@
 /IISPUBLISH-dev.MessiahSolutions.com/
 /packages/
 /MessiahSoftwareSolutions.com/PrivateAppSettings.config
+/MessiahSoftwareSolutions.com/PrivateConnectionStrings.config
 /MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj.user
-
-
-
-
