--- a/MessiahSoftwareSolutions.com/Web.config
+++ b/MessiahSoftwareSolutions.com/Web.config
@@ -4,12 +4,18 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
+  <!-- PrivateAppSettings.config is for private application settings the will changed between environments (SMTP/AppCredentials Ect.. ) -->
   <appSettings file="PrivateAppSettings.config">
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  
+  <!-- Private connection strings! Read read.me file in the root folder to understand how to use the repository. -->
+  <connectionStrings configSource="PrivateConnectionStrings.config"></connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
