added publish profile for the messiahsoftwaresolutions.azurewebsites.net  app service i'm currently starting to use ( 10$ per month !)

--- a/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
+++ b/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
@@ -438,6 +438,9 @@
     <Content Include="fonts\materialdesignicons-webfont.woff2" />
     <Content Include="PrivateAppSettings.config" />
     <Content Include="PrivateConnectionStrings.config" />
+    <None Include="Properties\PublishProfiles\MessiahSoftwareSolutions - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\MessiahSoftwareSolutions - ReadOnly - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\MessiahSoftwareSolutions - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\PublishPlan-MessiahSolutions.com.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
