--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /MessiahSoftwareSolutions.com/PrivateAppSettings.config
 /MessiahSoftwareSolutions.com/PrivateConnectionStrings.config
 /MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj.user
+/MessiahSoftwareSolutions.com/Properties/PublishProfiles/PublishPlan-MessiahSolutions.com.pubxml.user
