--- a/MessiahSoftwareSolutions.com/Web.config
+++ b/MessiahSoftwareSolutions.com/Web.config
@@ -19,6 +19,36 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+
+
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
+
+
+
+    <customErrors mode="Off" >
+      
+    </customErrors>
+    
+    
+    
+    
+    
+    <!--<rewrite>
+      <rules>
+        <clear />
+        <rule name="Redirect all requests to https" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action
+             type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}"
+             redirectType="Found" appendQueryString="false" />
+        </rule>
+      </rules>
+    </rewrite>-->
+
+    
   </system.web>
   <system.webServer>
     <handlers>
@@ -28,6 +58,11 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
         preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    
+    
+    
+    
+    
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
