--- a/MessiahSoftwareSolutions.com/Web.config
+++ b/MessiahSoftwareSolutions.com/Web.config
@@ -29,35 +29,16 @@
 
     <clientDependency configSource="config\ClientDependency.config"/>
 
-    <appSettings>
-        <add key="Umbraco.Core.ConfigurationStatus" value="8.5.1"/>
-	    <add key="Umbraco.Core.ReservedUrls" value=""/>
-        <add key="Umbraco.Core.ReservedPaths" value=""/>
-        <add key="Umbraco.Core.Path" value="~/umbraco"/>
-        <add key="Umbraco.Core.HideTopLevelNodeFromPath" value="true"/>
-        <add key="Umbraco.Core.TimeOutInMinutes" value="20"/>
-        <add key="Umbraco.Core.DefaultUILanguage" value="en-US"/>
-        <add key="Umbraco.Core.UseHttps" value="false"/>
-
-        <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
-        <add key="webpages:Enabled" value="false"/>
-        <add key="enableSimpleMembership" value="false"/>
-        <add key="autoFormsAuthentication" value="false"/>
-        <add key="dataAnnotations:dataTypeAttribute:disableRegEx" value="false"/>
-
-        <add key="owin:appStartup" value="UmbracoDefaultOwinStartup"/>
-
-        <add key="Umbraco.ModelsBuilder.Enable" value="true"/>
-        <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive"/>
+    <appSettings configSource="PrivateAppSettings.config">
+        
     </appSettings>
 
     <!--
     Important: If you're upgrading Umbraco, do not clear the connection
     string / provider name during your web.config merge.
   -->
-    <connectionStrings>
-        <remove name="umbracoDbDSN"/>
-        <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0"/>
+    <connectionStrings configSource="PrivateConnectionStrings.config">
+        
     </connectionStrings>
 
     <system.data>
