more annoying changes .. renamed "MessiahLogo-TempFirstAnnoyingTopWebsiteLogo-121119.png" from "MessiahLogo-TopWebsite-121119.png" + changed on productio

--- a/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
+++ b/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
@@ -2577,6 +2577,7 @@
     <Content Include="Umbraco\Views\Default.cshtml" />
     <Content Include="Umbraco\Views\Preview\Index.cshtml" />
     <Content Include="Umbraco\Views\web.config" />
+    <Content Include="Views\HomeUmbracoBackUp20012020.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
