--- a/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
+++ b/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj
@@ -441,6 +441,7 @@
     <Content Include="images\ComingSoon\email.png" />
     <Content Include="images\ComingSoon\facebook.png" />
     <Content Include="images\ComingSoon\linkedin.png" />
+    <Content Include="images\ComingSoon\Logo\TempCompanyLogo3-02-02-2020-english.png" />
     <Content Include="images\ComingSoon\mobile-bg.jpg" />
     <Content Include="images\ComingSoon\twitter.png" />
     <Content Include="images\controls.jpg" />
@@ -543,7 +544,6 @@
     <Content Include="images\masonry-title-inside-gallery-03-570x790.jpg" />
     <Content Include="images\masonry-title-inside-gallery-04-570x790.jpg" />
     <Content Include="images\megamenu-banner-301x510.jpg" />
-    <Content Include="images\MessiahLogo-TopWebsite-121119.png" />
     <Content Include="images\parallax-bg-01.jpg" />
     <Content Include="images\parallax-image-1-1920x1010.jpg" />
     <Content Include="images\parallax-image-2-1920x1010.jpg" />
