git ignore updated settings following folder changes and for app_data commited files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /MessiahSoftwareSolutions.com/bin/
 /MessiahSoftwareSolutions.com/obj/
-/MessiahSoftwareSolutions.com/App_Data/
+/MessiahSolutions.com/App_Data/
 /.vs/
 /IISPUBLISH-dev.MessiahSolutions.com/
 /packages/
-/MessiahSoftwareSolutions.com/PrivateAppSettings.config
-/MessiahSoftwareSolutions.com/PrivateConnectionStrings.config
-/MessiahSoftwareSolutions.com/MessiahSolutions.com.csproj.user
-/MessiahSoftwareSolutions.com/Properties/PublishProfiles/PublishPlan-MessiahSolutions.com.pubxml.user
+/MessiahSolutions.com/PrivateAppSettings.config
+/MessiahSolutions.com/PrivateConnectionStrings.config
+/MessiahSolutions.com/MessiahSolutions.com.csproj.user
+/MessiahSolutions.com/Properties/PublishProfiles/PublishPlan-MessiahSolutions.com.pubxml.user
 
