git ignore settings for obj/bin folders following delete the accidently commited files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/MessiahSoftwareSolutions.com/bin/
-/MessiahSoftwareSolutions.com/obj/
+/MessiahSolutions.com/bin/
+/MessiahSolutions.com/obj/
 /MessiahSolutions.com/App_Data/
 /.vs/
 /IISPUBLISH-dev.MessiahSolutions.com/
