changes in gitignore // removed the umbraco.sdf from git ignore + added more app_data files / models to rename repository and retry to re pull project from git and test publish the project (untill it will be ready to be converted to actual sql tables / scripts / unknown CI/CD procedures )

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 /MessiahSolutionsComFrontEnd/bin/
 /MessiahSolutionsComFrontEnd/obj/
-/MessiahSolutionsComFrontEnd/App_Data/
+
+/MessiahSolutionsComFrontEnd/App_Data/cache/
+/MessiahSolutionsComFrontEnd/App_Data/Logs/
+/MessiahSolutionsComFrontEnd/App_Data/temp/
+/MessiahSolutionsComFrontEnd/App_Data/models/models.hash
+/MessiahSolutionsComFrontEnd/App_Data/models/all.dll.path
+
+
 /.vs/
 /IISPUBLISH-dev.MessiahSolutions.com/
 /packages/
