--- a/MessiahSolutionsComFrontEnd/config/umbracoSettings.config
+++ b/MessiahSolutionsComFrontEnd/config/umbracoSettings.config
@@ -15,7 +15,7 @@
   <content>
 
     <errors>
-      <error404>1</error404>
+      <!--<error404>1</error404>-->
       <!--
         The value for error pages can be:
         * A content item's GUID ID      (example: 26C1D84F-C900-4D53-B167-E25CC489DAC8)
@@ -28,12 +28,23 @@
             <errorPage culture="en-US">D820E120-6865-4D88-BFFE-48801A6AC375</errorPage>
         </error404>
        -->
-    </errors>
+	    <error404>
+			<errorPage culture="default">9b0699f2-e9a1-4da6-82ee-809da2f068b9</errorPage>
+			<errorPage culture="en-US">9b0699f2-e9a1-4da6-82ee-809da2f068b9</errorPage>
+		</error404>
+
+		<error500>
+			<errorPage culture="default">3a57276e-0b81-42cd-adcd-af1356929537</errorPage>
+			<errorPage culture="en-US">3a57276e-0b81-42cd-adcd-af1356929537</errorPage>
+		</error500>
+
+
+	</errors>
 
     <notifications>
       <!-- the email that should be used as from mail when umbraco sends a notification -->
       <!-- you can add a display name to the email like this: <email>Your display name here &lt;your@email.here&gt;</email> -->
-      <email>your@email.here</email>
+      <email>vadim@messiahsolutions.com</email>
     </notifications>
 
     <!-- The html injected into a (x)html page if Umbraco is running in preview mode -->
