--- a/MessiahSolutionsComFrontEnd/MessiahSolutionsComFrontEnd.csproj
+++ b/MessiahSolutionsComFrontEnd/MessiahSolutionsComFrontEnd.csproj
@@ -3667,6 +3667,8 @@
     <Content Include="Views\ErrorPage404.cshtml" />
     <Content Include="Views\ErrorPage500.cshtml" />
     <Content Include="Views\Brand.cshtml" />
+    <Content Include="Views\FrequentlyAskedQuestions.cshtml" />
+    <Content Include="Views\AboutUs.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
