--- a/MessiahSolutionsComFrontEnd/Web.config
+++ b/MessiahSolutionsComFrontEnd/Web.config
@@ -28,10 +28,9 @@
   <!--
         Important: if you're upgrading Umbraco, do not clear the connectionString/providerName during your Web.config merge.
     -->
-  <connectionStrings>
-    <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0"/>
+  <connectionStrings configSource="PrivateConnectionStrings.config">
   </connectionStrings>
+	
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SqlServerCe.4.0"/>
